# slack-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-slack-link-reader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-slack-link-reader/checklists/: requirements.md
specs/001-slack-link-reader/contracts/: cli-interface.md
specs/002-extract-desktop-tokens/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-extract-desktop-tokens/checklists/: requirements.md
specs/002-extract-desktop-tokens/contracts/: cli-extract.md
src/slack_cli/: __main__.py  api.py  cache.py  cli.py  config.py  formatter.py  link.py  log.py  mrkdwn.py  slack_tokens.py
src/slack_cli/commands/: extract.py  login.py  read.py
tests/: test_placeholder.py
tests/integration/: test_read_command.py
tests/unit/: test_cache.py  test_config.py  test_formatter.py  test_link.py  test_mrkdwn.py
