[project]
name = "slack-cli"
version = "0.1.0"
description = "CLI tool to translate Slack links to readable message content"
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[project.scripts]
slack-cli = "slack_cli.__main__:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_cli"]
